# arches-v2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  README.md  arches-v2.sln
arches-v2/: CMakeLists.txt  arches-v2.args.json  arches-v2.vcxproj  arches-v2.vcxproj.filters  format-table.sh  gen-table.sh  gen-tables.sh  out.ppm  out.txt  simulate-pt.sh  simulate.sh  temp.txt  test.prof
arches-v2/src/: CMakeLists.txt  describo.hpp  dual-streaming.hpp  main.cpp  stdafx.hpp  trax.hpp
arches-v2/src/arches/isa/: errors.hpp  execution-base.hpp  registers.cpp  registers.hpp  riscv.cpp  riscv.hpp
arches-v2/src/arches/simulator/: acknowledge-buffer.hpp  input-buffer.hpp  interconnects.hpp  output-buffer.hpp  simulator.cpp  simulator.hpp
arches-v2/src/arches/units/: uint-atomic-increment.hpp  uint-atomic-reg-file.hpp  uint-tile-scheduler.hpp  unit-atomic-reg-file.hpp  unit-base.hpp  unit-buffer.hpp  unit-cache - Copy.cpp  unit-cache - Copy.hpp  unit-cache-base.cpp  unit-cache-base.hpp  unit-cache.cpp  unit-cache.hpp  unit-core-simple.cpp  unit-core-simple.hpp  unit-dram.cpp  unit-dram.hpp  unit-execution-base.hpp  unit-l1-cache.cpp  unit-l1-cache.hpp  unit-main-memory-base.hpp  unit-memory-base.hpp  unit-non-blocking-cache.cpp  unit-non-blocking-cache.hpp  unit-sfu.hpp  unit-sram.hpp  unit-tile-scheduler.hpp  unit-tp.cpp  unit-tp.hpp
arches-v2/src/arches/units/dual-streaming/: unit-ds-tp.cpp  unit-ds-tp.hpp  unit-ray-staging-buffer.hpp  unit-scene-buffer.hpp  unit-stream-scheduler.hpp
arches-v2/src/arches/units/trax/: unit-sfu.cpp  unit-sfu.hpp  unit-thread-proccesor.cpp  unit-thread-proccesor.hpp  unit-tp.cpp  unit-tp.hpp  unit-trax-tp.cpp  unit-trax-tp.hpp
arches-v2/src/arches/units/usimm/: L2Cache.cc  L2Cache.h  memory_controller.cc  memory_controller.h  params.h  processor.h  scheduler.cc  scheduler.h  usimm.cc  usimm.h
arches-v2/src/arches/util/: arbitration.hpp  barrier.cpp  barrier.hpp  bit-manipulation.hpp  elf.cpp  elf.hpp  endian.hpp  file.cpp  file.hpp  math.hpp  round-robin-arbitrator.hpp  string.hpp  transactions.hpp
arches-v2/src/config-files/usimm/: gddr5.cfg
arches-v2/src/isa/: errors.hpp  execution-base.hpp  registers.cpp  registers.hpp  riscv.cpp  riscv.hpp
arches-v2/src/simulator/: interconnects.hpp  simulator.cpp  simulator.hpp  transactions.hpp
arches-v2/src/software/trax/: compile-x86.sh  out.ppm
arches-v2/src/software/trax/src/: aabb.hpp  bvh.hpp  camera.hpp  custom-instr.hpp  hit.hpp  intersect.hpp  kernels.hpp  log.txt  main.cpp  mesh.hpp  primary_ray_gen.cpp  ray-tracing-include.hpp  ray.hpp  rtm.hpp  sampling.hpp  trace_rays.cpp  triangle.hpp
arches-v2/src/trax/software/: compile-riscv.sh  compile-x86.sh  out.ppm
arches-v2/src/trax/software/src/: aabb.hpp  intersect.hpp  kernels.hpp  main.cpp  mesh.hpp  node.hpp  ray-tracing-include.hpp  ray.hpp  stdafx.hpp  triangle.hpp  vec4.hpp
arches-v2/src/trax/units/: unit-shared-functional.cpp  unit-shared-functional.hpp  unit-thread-proccesor.cpp  unit-thread-proccesor.hpp
arches-v2/src/units/: unit-atomic-reg-file.hpp  unit-base.hpp  unit-blocking-cache.cpp  unit-blocking-cache.hpp  unit-buffer.hpp  unit-cache-base.cpp  unit-cache-base.hpp  unit-dram.cpp  unit-dram.hpp  unit-main-memory-base.hpp  unit-memory-base.hpp  unit-non-blocking-cache.cpp  unit-non-blocking-cache.hpp  unit-sfu.hpp  unit-tile-scheduler.hpp  unit-tp.cpp  unit-tp.hpp
arches-v2/src/units/dual-streaming/: unit-ds-tp.hpp  unit-hit-record-updater.cpp  unit-hit-record-updater.hpp  unit-ray-staging-buffer.hpp  unit-stream-scheduler-old.hpp  unit-stream-scheduler.cpp  unit-stream-scheduler.hpp
arches-v2/src/units/trax/: unit-sfu.hpp  unit-trax-tp.hpp
arches-v2/src/units/usimm/: configfile.h  memory_controller.cc  memory_controller.h  params.h  scheduler.cc  scheduler.h  usimm.cc  usimm.h
arches-v2/src/units/usimm/config-files/: gddr5.cfg  gddr5_8ch.cfg  gddr5_amd_map1_128col_8ch.cfg
arches-v2/src/util/: arbitration.hpp  bit-manipulation.hpp  elf.hpp  endian.hpp  file.hpp  memory-map.hpp  stbi.cpp  string.cpp  string.hpp  transactions.hpp
describo-benchmark/: CMakeLists.txt  describo-benchmark.vcxproj  describo-benchmark.vcxproj.filters  instr-list.sh
dual-streaming-benchmark/: CMakeLists.txt  compile-x86.sh  dual-streaming-benchmark.args.json  dual-streaming-benchmark.vcxproj  dual-streaming-benchmark.vcxproj.filters  info.txt  log.txt  makefile
dual-streaming-benchmark/riscv/: kernel  kernel.dump
dual-streaming-benchmark/src/: aabb.hpp  custom-instr.hpp  include.hpp  intersect.hpp  main.cpp  path-tracer.cpp  stdafx.hpp  treelet-bvh.hpp  triangle.hpp  uvec3.hpp  vec3.hpp
html/: _l2_cache_8h_source.html  annotated.html  arbitration_8hpp_source.html  benchmarks_2describo_2src_2stb__image_8h_source.html  benchmarks_2describo_2src_2stb__image__write_8h_source.html  benchmarks_2describo_2src_2stdafx_8hpp_source.html  benchmarks_2dual-streaming_2src_2stdafx_8hpp_source.html  benchmarks_2trax_2src_2stdafx_8hpp_source.html  bit-manipulation_8hpp_source.html  class_a_a_b_b-members.html  class_a_a_b_b.html  class_a_a_b_b16-members.html  class_a_a_b_b16.html  class_arbitration_network64-members.html  class_arbitration_network64.html  class_arches_1_1_e_l_f-members.html  class_arches_1_1_e_l_f.html  class_arches_1_1_e_l_f_1_1_e_l_f___header-members.html  class_arches_1_1_e_l_f_1_1_e_l_f___header.html  (+331 more)
src/dual-streaming-kernel/: CMakeLists.txt  custom-instr.hpp  include.hpp  intersect.hpp  main.cpp  makefile  stdafx.hpp  treelet-bvh.hpp  work-item.hpp
src/dual-streaming-kernel/riscv/: kernel  kernel.dump
trax-benchmark/: CMakeLists.txt  makefile  trax-benchmark.args.json  trax-benchmark.vcxproj  trax-benchmark.vcxproj.filters
trax-benchmark/riscv/: kernel  path-tracer  path-tracer.dump
trax-benchmark/src/: aabb.hpp  bvh.hpp  camera.hpp  custom-instr.hpp  intersect.hpp  main.cpp  mesh.hpp  path-tracer.cpp  ray-tracing-include.hpp  ray.hpp  sampling.hpp  stdafx.hpp  triangle.hpp
trax-benchmark/src/rtm/: rtm-float.hpp  rtm-rng.hpp  rtm-uvec3.hpp  rtm-vec2.hpp  rtm-vec3.hpp  rtm-vec4.hpp  rtm.hpp
(+1073 files in other folders)
